force-app/main/default/objects/Project_Milestones__c/Project_Milestones__c.object-meta.xml
<CustomObject>
    <description>Object to handle All Milestones &amp; their Progress with each Projects</description>
    <label>Project Milestones</label>
    <nameField>
        <label>Milestones Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>