force-app/main/default/objects/Project_Milestones__c/fields/CompletePercent__c.field-meta.xml
<CustomField>
    <fullName>CompletePercent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to handle the project milestone percentage complete on the basis of ToDo Items with the respective Milestone.</description>
    <label>% Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>