force-app/main/default/objects/Project_Milestones__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Milestone Due Date for particular Project</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>