force-app/main/default/objects/Project_Milestones__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Field to link Milestone with the Project</description>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>Project_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>